# libPantin

./: .gitignore  README.md
resources/: pantin.qrc
resources/text/: stylesheet.css
source/: CMakeLists.txt
source/inc/: PantinApplication.hpp  PantinBlockTypes.hpp  PantinEngine.hpp  PantinExport.hpp  PantinInstancesManager.hpp  PantinModule.hpp
source/inc/actions/: AddElement.cxx  AddElement.hpp  AddGeometryInstance.hpp  AddNewGeometry.hpp  AddTransformations.hpp  DeleteInstanceReference.hpp  LoadInstanceReference.hpp  ProjectAddModel.hpp  RemoveElement.hpp  ResolveElementInstance.hpp  headers.cmake
source/inc/commands/: ProjectAddModel.hpp  headers.cmake
source/inc/dialogs/: GenerateShape.hpp  NewProject.hpp  OpenProject.hpp  headers.cmake
source/inc/perspectives/: Modeling.hpp  Modelling.hpp  Project.hpp  headers.cmake
source/inc/serialization/: FileImporterWizard.hpp  Serializer.hpp  headers.cmake
source/inc/serialization/3ds/: 3dsFileImporterWizard.hpp  3dsImportTasklet.hpp  3dsSearchingTasklet.hpp  3dsSerializer.hpp  3dsStructures.hpp  3dsTasklet.hpp
source/inc/tasklets/: LoadInstance.hpp  SaveAllInstances.hpp  SaveInstance.hpp  headers.cmake
source/inc/views/: UndoView.hpp  headers.cmake
source/inc/views/elementEditor/: ElementEditor.hpp  ElementModel.hpp
source/inc/views/sceneView/: GLGraphicsScene.hpp  GLPainterControlItems.hpp  GLView.hpp  GLViewport.hpp  GLViewportCamera.hpp  GLViewportCube.hpp  SceneView.hpp  SceneViewEngine.hpp
source/inc/views/sceneView/tools/: CameraControl.hpp  CameraTrackball.hpp  Tool.hpp  ToolBox.hpp
source/inc/views/undoView/: UndoView.hpp
source/src/: PantinApplication.cpp  PantinEngine.cpp  PantinInstancesManager.cpp  PantinModule.cpp
source/src/actions/: AddGeometryInstance.cpp  AddNewGeometry.cpp  AddTransformations.cpp  DeleteInstanceReference.cpp  LoadInstanceReference.cpp  ProjectAddModel.cpp  RemoveElement.cpp  ResolveElementInstance.cpp  sources.cmake
source/src/commands/: ProjectAddModel.cpp  sources.cmake
source/src/dialogs/: GenerateShape.cpp  NewProject.cpp  OpenProject.cpp  sources.cmake
source/src/perspectives/: Modelling.cpp  Project.cpp  sources.cmake
source/src/serialization/: FileImporterWizard.cpp  Serializer.cpp  sources.cmake
source/src/serialization/3ds/: 3dsFileImporterWizard.cpp  3dsImportTasklet.cpp  3dsSearchingTasklet.cpp  3dsSerializer.cpp  3dsTasklet.cpp
source/src/tasklets/: LoadInstance.cpp  SaveAllInstances.cpp  SaveInstance.cpp  sources.cmake
source/src/views/: UndoView.cpp  sources.cmake
source/src/views/elementEditor/: ElementEditor.cpp  ElementModel.cpp
source/src/views/sceneView/: GLGraphicsScene.cpp  GLView.cpp  GLViewport.cpp  GLViewportCamera.cpp  GLViewportCube.cpp  SceneView.cpp  SceneViewEngine.cpp
source/src/views/sceneView/tools/: CameraControl.cpp  CameraTrackball.cpp  Tool.cpp  ToolBox.cpp
source/src/views/undoView/: UndoView.cpp
